[package]
name = "nghttp2-sys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = 'nghttp2'
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/nghttp2-rs"
homepage = "https://github.com/alexcrichton/nghttp2-rs"
description = """
FFI bindings for libnghttp2 (nghttp2)
"""

[build-dependencies]
cc = "1.0.24"
