[package]
name = "libnghttp2-sys"
version = "0.1.8+1.55.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = 'nghttp2'
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/nghttp2-rs"
homepage = "https://github.com/alexcrichton/nghttp2-rs"
description = """
FFI bindings for libnghttp2 (nghttp2)
"""

[lib]
doctest = false

[workspace]
members = ['systest']

[dependencies]
libc = '0.2'

[build-dependencies]
cc = "1.0.24"
